Adjust content styles to ensure that image alignments, blockquotes, lists, etc work.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -95,3 +95,127 @@ table {
 		}
 	}
 }
+
+
+table {
+	width: 100%;
+
+	tr {
+		td {
+			vertical-align: top;
+			padding: 6px 10px;
+		}
+	}
+}
+
+
+@mixin field-styles {
+	padding: 10px 12px;
+	border: 1px solid lighten( $grey , 20% );
+	font-size: 1em;
+	color: #333;	
+}
+
+
+.content-style {
+	ol, ul {
+		padding: 5px 0 5px 35px;
+
+		li {
+			padding: 3px 0;
+		}
+
+		&.gform_fields {
+			padding: 5px 0;
+		}
+	}
+
+	ul {
+		list-style-type: disc;
+	}
+
+	ol {
+		list-style-type: decimal;
+	}
+
+	h1, h2, h3, h4, h5, h6 {
+		font-style: italic;
+		color: $grey-dark;
+		padding: 10px 0 5px;
+	}
+
+	blockquote {
+		padding: 10px 25px;
+		font-style: italic;
+		font-size: 1.2em;
+		line-height: 1.5em;
+		color: $grey;
+		border-left: 3px solid lighten( $grey, 25% );
+		margin: 10px 0 10px 20px;
+	}
+
+	hr {
+		border: 0;
+		border-bottom: 1px solid lighten( $grey, 25% );
+		padding: 0;
+		margin: 25px 0;
+	}
+
+	
+	img, .wp-caption {
+		&.alignleft {
+			float: left;
+			margin: 0 10px 10px 0;
+		}
+
+		&.alignright {
+			float: right;
+			margin: 0 0 10px 10px;
+		}
+		
+		&.aligncenter {
+			display: block;
+			margin: 0 auto;
+		}
+	}
+
+	.wp-caption {
+		color: $grey;
+		max-width: 40%;
+
+		p {
+			padding: 4px 0;
+		}
+
+		@include respond-to( 768px ) {
+			float: right;
+			margin: 0 0 20px 20px;
+		}
+
+		.caption, .wp-caption-text {
+			font-size: .9em;
+			font-style: italic;
+		}
+	}
+
+	.quiet {
+		color: $grey;
+		font-style: italic;
+	}
+
+	.frame-shadow {
+		box-shadow: 0 0 50px rgba( $grey, .2 );
+		border: 1px solid lighten( $grey , 20% );
+	}
+
+	.gform_wrapper {
+		input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]), textarea {
+			@include field-styles;
+		}
+	}
+
+	input[type=text] {
+		@include field-styles
+	}
+}
+
